# gitctx

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
configs/: gctx1-proof-model.v0.json
docs/: data-and-distillation.md  evaluation.md  local-worker-runbook.md  model-plan.md  open-source-standard.md  release-checklist.md  source-diff-review.md  source-manifest.md  split-contract.md  teacher-audit-plan.md  teacher-inputs.md  teacher-model-shortlist.md  training-artifacts.md
examples/: generated-label.example.jsonl  source-diff-review.example.jsonl  source-manifest.example.jsonl  split-plan.example.json
manifests/: README.md  source-manifest.audit.jsonl
prompts/: commit-message-teacher-v0.1.md  commit-message-teacher-v0.2.md
schemas/: generated-label-review.schema.json  generated-label.schema.json  proof-model-config.schema.json  source-diff-review.schema.json  source-diff.schema.json  source-manifest-entry.schema.json  split-plan.schema.json  teacher-input.schema.json  training-example.schema.json
templates/: data-card.md  eval-card.md  model-card.md
tests/: test_artifact_eval.py  test_conventional.py  test_data_artifacts.py  test_ollama_generate.py  test_proof_handoff.py  test_proof_lm_train.py  test_proof_model_config.py  test_proof_readiness.py  test_proof_sequences.py  test_proof_sft_smoke.py  test_proof_tokenizer.py  test_proof_train.py  test_proof_train_job.py  test_prototype_model.py  test_provenance.py  test_source_extract.py  test_split_plan.py  (+5 more)
(+34 files in other folders)
